--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ venv/
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+frames
 
 # Installer logs
 pip-log.txt
